# Ulam-Number-Generator

./: .clang-format  Makefile  README.md  build.py  pairs_adjacent.csv  pyproject.toml  visualization_script.py
Visualizations/Gaps/: ulam_gaps.json
c_src/: ulam.c  ulam.h
tests/: test_ulam.py
ulam_number_generator/: __init__.py  _loader.py  cli.py  core.py
