[project]
name = "ulam_number_generator"
version = "0.1.0"
description = "Fast Ulam number generator - C-backed with a high-level Python API"
requires-python = ">=3.14"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "ANN",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["ulam_number_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
